--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,6 @@ services:
       - 5432:5432
     volumes:
       - ./db_init/:/docker-entrypoint-initdb.d/
-      - ./store:/var/lib/postgresql/data
-        
+      - pg_data:/var/lib/postgresql/data
+volumes:
+  pg_data:        
