--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     depends_on:
       - "db"
     environment:
-       OPENID_DISCOVERY_URL: 'http://keycloak:8080/auth/realms/master/.well-known/openid-configuration'
-       IVT_ENABLE_AUTH: 'true'
+       IVT_OPENID_DISCOVERY_URL: 'http://keycloak:8080/auth/realms/master/.well-known/openid-configuration'
+       #IVT_ENABLE_AUTH: 'true'
 
   db:
     image: postgres:14-alpine
