--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "keycloak"
     environment:
        IVT_OPENID_DISCOVERY_URL: 'http://keycloak:8080/auth/realms/master/.well-known/openid-configuration'
-       #IVT_ENABLE_AUTH: 'true'
+       IVT_ENABLE_AUTH: 'true'
     labels:
     - "traefik.enable=true"
     - "traefik.http.routers.invitease.rule=Host(`invitease.localhost`)"
