--- a/flutter_ui/pubspec.yaml
+++ b/flutter_ui/pubspec.yaml
@@ -1,4 +1,4 @@
-name: webtest1
+name: invitease
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
