--- a/web/package.json
+++ b/web/package.json
@@ -3,12 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "oidc-client-ts": "^2.0.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --max_old_space_size=8128 start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -27,5 +29,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.6",
+        "@types/react-dom": "^18.0.2"
     }
 }
