--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "moment": "^2.29.3",
         "oidc-client-ts": "^2.0.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-moment": "^1.1.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.0"
     },
