--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,4 +1,28 @@
-FROM jboss/keycloak:latest
+FROM quay.io/keycloak/keycloak:latest as builder
 
-ADD kc-seed.sh /opt/jboss/startup-scripts/kc-seed.sh
-ADD standalone.xml /opt/jboss/keycloak/standalone/configuration/standalone.xml
+ENV KC_HEALTH_ENABLED=true
+ENV KC_METRICS_ENABLED=true
+ENV KC_FEATURES=token-exchange
+ENV KC_DB=postgres
+# Install custom providers
+RUN curl -sL https://github.com/aerogear/keycloak-metrics-spi/releases/download/2.5.3/keycloak-metrics-spi-2.5.3.jar -o /opt/keycloak/providers/keycloak-metrics-spi-2.5.3.jar
+RUN /opt/keycloak/bin/kc.sh build
+
+FROM quay.io/keycloak/keycloak:latest
+COPY --from=builder /opt/keycloak/ /opt/keycloak/
+WORKDIR /opt/keycloak
+# for demonstration purposes only, please make sure to use proper certificates in production instead
+RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:keycloak.localohst,IP:127.0.0.1" -keystore conf/server.keystore
+# change these values to point to a running postgres instance
+ENV KC_DB=postgres
+ENV KC_DB_URL=jdbc:postgresql://db/keycloak
+ENV KC_DB_USERNAME=invitease
+ENV KC_DB_PASSWORD=password
+ENV KC_HOSTNAME=keycloak.localhost
+ENV KEYCLOAK_ADMIN=admin
+ENV KEYCLOAK_ADMIN_PASSWORD=admin
+ENV KC_HTTP_ENABLED=true
+ENV KC_HTTP_PORT=80
+ADD kc-seed.sh /opt/keycloak/bin/kc-seed.sh
+ADD standalone.xml /opt/keycloak/standalone/configuration/standalone.xml
+ENTRYPOINT ["/bin/bash", "-c", "/opt/keycloak/bin/kc-seed.sh && /opt/keycloak/bin/kc.sh start-dev"]
