--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "formik": "^2.2.9",
         "moment": "^2.29.3",
         "oidc-client-ts": "^2.0.3",
         "react": "^18.1.0",
