--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
 
     "browserslist": {
         "production": [
