--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.8.2",
         "formik": "^2.2.9",
         "moment": "^2.29.3",
         "oidc-client-ts": "^2.0.3",
@@ -21,7 +24,6 @@
     "eslintConfig": {
         "extends": "react-app"
     },
-
     "browserslist": {
         "production": [
             ">0.2%",
