--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
         "react-scripts": "^5.0.1"
     },
     "scripts": {
-        "start": "react-scripts --max_old_space_size=8128 start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
