--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,33 +1,16 @@
 {
-  "compilerOptions": {
-    "noImplicitAny": true,
-    "removeComments": true,
-    "declaration": true,
-    "sourceMap": true,
-    "jsx": "preserve",
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+    "compilerOptions": {
+        "noImplicitAny": true,
+        "removeComments": true,
+        "declaration": true,
+        "sourceMap": true,
+        "jsx": "react"
+    },
+    "include": [
+        "./src/**/*.tsx",
+        "./src/**/*.ts"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true
-  },
-  "include": [
-    "./src/**/*.tsx",
-    "./src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "exclude": [
+        "node_modules"
+    ]
 }
