--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@mui/material": "^5.9.0",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@mui/material": "^5.10.2",
         "formik": "^2.2.9",
         "moment": "^2.29.4",
         "oidc-client-ts": "^2.0.5",
@@ -37,7 +37,8 @@
         ]
     },
     "devDependencies": {
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6"
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "typescript": "^4.7.4"
     }
 }
